tests/specs/run/no_cjs_suggestion_mts_file/main.out
3
error: Uncaught (in promise) ReferenceError: module is not defined
module.isPreloading = true;
^
    at file:///[WILDLINE]/main.mts:5:1
