tests/specs/run/no_cjs_suggestion_mts_file/main.mts
import * as a from "./a.cts";

console.log(a.add(1, 2));

module.isPreloading = true;
